--- a/Store_data.ipynb
+++ b/Store_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTfs3QY7ixAPceO/VL8c0V",
+      "authorship_tag": "ABX9TyM/u8DkE4hoIKPAXVk510T5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "q1FY3PLStvXl"
       },
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "AvLD_TQ4vUns"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "id": "e98S53ibvWV-",
         "outputId": "008c5f3f-e7b9-4742-8967-4ba589420bec"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -272,7 +272,7 @@
         "id": "XSq-821OvWjH",
         "outputId": "f9cb937e-9e2e-4edf-8e49-e1d0a3558320"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +306,7 @@
       "metadata": {
         "id": "dxVjJFypvWut"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -321,7 +321,7 @@
         "id": "yQl44WdqvW5J",
         "outputId": "c6d9b9c5-84f4-40bf-f746-a9f512d2ea5c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +359,7 @@
         "id": "tPHjM5QmxemT",
         "outputId": "0cd71d83-b5ed-47ff-981c-482be19db08c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +566,7 @@
         "id": "tQgUEMgrxg_5",
         "outputId": "8b2107c1-856e-4447-af59-f60a6c40588a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -801,7 +801,7 @@
       "metadata": {
         "id": "bbkaSnbQxl9v"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,7 +812,7 @@
       "metadata": {
         "id": "zUPDKJv8AVY1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -823,7 +823,7 @@
       "metadata": {
         "id": "jVln2x0iAWbU"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -839,7 +839,7 @@
         "id": "hoOFbWLLFIFh",
         "outputId": "fab3c1e3-e8d6-41ba-9497-a184e662b734"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8938,7 +8938,7 @@
         "id": "EyBxAoJ4FI96",
         "outputId": "6e7b9941-cc32-4d21-ba82-8f541a49cf66"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9083,7 +9083,7 @@
         "id": "3flj7AyPGsPe",
         "outputId": "159b06cc-3663-4ccb-932e-f20e32ea79c4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9124,7 +9124,7 @@
       "metadata": {
         "id": "SkTtcNt8HOSH"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9139,7 +9139,7 @@
       "metadata": {
         "id": "e8EsOlJpKvug"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9150,7 +9150,7 @@
       "metadata": {
         "id": "tD0GCAQjK_6Y"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9165,7 +9165,7 @@
         "id": "e4OAtZrVLWti",
         "outputId": "82fdc470-67aa-4607-dc51-aa0a93b388ae"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9200,7 +9200,7 @@
       "metadata": {
         "id": "dtNgrtGrIN0O"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9212,7 +9212,7 @@
       "metadata": {
         "id": "d0PFGj6aInZ9"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9223,7 +9223,7 @@
       "metadata": {
         "id": "vqVw9Og_I2Kn"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9238,7 +9238,7 @@
         "id": "PkuAO39TJJO6",
         "outputId": "dc1e312b-1694-4577-e3bc-0059a0b52b0d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9281,7 +9281,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As per the above summary , the variables - Holiday_flg,fuel_price, year, day have p value less than 0.05, whoch indicates these do not have impact on the tartget variable and can be removed."
+        "As per the above summary , the variables - Holiday_flg,fuel_price, year, day have p value greater than 0.05, whoch indicates these do not have impact on the tartget variable and can be removed."
       ],
       "metadata": {
         "id": "ogJAg2p7L3kP"
@@ -9295,7 +9295,7 @@
       "metadata": {
         "id": "AETypBcQOH6r"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9306,7 +9306,7 @@
       "metadata": {
         "id": "Q2-ld8hELiIy"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9318,7 +9318,7 @@
       "metadata": {
         "id": "wQHt7A-mMbK2"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9331,7 +9331,7 @@
       "metadata": {
         "id": "aGW-ubWLMevN"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9347,7 +9347,7 @@
         "id": "4mBnv4MyPNO-",
         "outputId": "4305d9d2-fd92-4ab4-d40b-dec6b7788c0a"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9521,7 +9521,7 @@
         "id": "QRotfkpMPRsW",
         "outputId": "ebf9b1ba-0ba5-4aac-fa7b-3caec49d86c0"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9755,7 +9755,7 @@
       "metadata": {
         "id": "7oEfWzWBQSaU"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9767,7 +9767,7 @@
       "metadata": {
         "id": "fH_tGWuMQdsg"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9778,7 +9778,7 @@
       "metadata": {
         "id": "3tIOmWlJQnUc"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9793,7 +9793,7 @@
         "id": "a3OYIENDQnvX",
         "outputId": "f1ea0339-56ee-4e98-e08d-f049703c1b92"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9841,7 +9841,7 @@
         "id": "5BQ-fIl4Rc3K",
         "outputId": "2aa0f613-7406-4524-f555-6c7b9eec4371"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9863,7 +9863,7 @@
       "metadata": {
         "id": "OjSG_ybsQvUX"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9878,7 +9878,7 @@
         "id": "J6p15f1LRSZd",
         "outputId": "0ba8cbd6-7680-490a-e4b6-90032ee4df61"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9915,7 +9915,7 @@
         "id": "NhQs1tRER2Wd",
         "outputId": "150a3d16-59e3-4276-a3bb-bb6c1e6562b4"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
