--- a/Store_data.ipynb
+++ b/Store_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/u8DkE4hoIKPAXVk510T5",
+      "authorship_tag": "ABX9TyOAmBIXe7MJmK1KQgTsnSxz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "q1FY3PLStvXl"
       },
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "AvLD_TQ4vUns"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "id": "e98S53ibvWV-",
         "outputId": "008c5f3f-e7b9-4742-8967-4ba589420bec"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -272,7 +272,7 @@
         "id": "XSq-821OvWjH",
         "outputId": "f9cb937e-9e2e-4edf-8e49-e1d0a3558320"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +306,7 @@
       "metadata": {
         "id": "dxVjJFypvWut"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -321,7 +321,7 @@
         "id": "yQl44WdqvW5J",
         "outputId": "c6d9b9c5-84f4-40bf-f746-a9f512d2ea5c"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +359,7 @@
         "id": "tPHjM5QmxemT",
         "outputId": "0cd71d83-b5ed-47ff-981c-482be19db08c"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +566,7 @@
         "id": "tQgUEMgrxg_5",
         "outputId": "8b2107c1-856e-4447-af59-f60a6c40588a"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -801,7 +801,7 @@
       "metadata": {
         "id": "bbkaSnbQxl9v"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -812,7 +812,7 @@
       "metadata": {
         "id": "zUPDKJv8AVY1"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -823,7 +823,7 @@
       "metadata": {
         "id": "jVln2x0iAWbU"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -839,7 +839,7 @@
         "id": "hoOFbWLLFIFh",
         "outputId": "fab3c1e3-e8d6-41ba-9497-a184e662b734"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8938,7 +8938,7 @@
         "id": "EyBxAoJ4FI96",
         "outputId": "6e7b9941-cc32-4d21-ba82-8f541a49cf66"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9083,7 +9083,7 @@
         "id": "3flj7AyPGsPe",
         "outputId": "159b06cc-3663-4ccb-932e-f20e32ea79c4"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -9124,7 +9124,7 @@
       "metadata": {
         "id": "SkTtcNt8HOSH"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -9139,7 +9139,7 @@
       "metadata": {
         "id": "e8EsOlJpKvug"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -9150,7 +9150,7 @@
       "metadata": {
         "id": "tD0GCAQjK_6Y"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -9165,7 +9165,7 @@
         "id": "e4OAtZrVLWti",
         "outputId": "82fdc470-67aa-4607-dc51-aa0a93b388ae"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -9200,7 +9200,7 @@
       "metadata": {
         "id": "dtNgrtGrIN0O"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -9212,7 +9212,7 @@
       "metadata": {
         "id": "d0PFGj6aInZ9"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -9223,7 +9223,7 @@
       "metadata": {
         "id": "vqVw9Og_I2Kn"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -9238,7 +9238,7 @@
         "id": "PkuAO39TJJO6",
         "outputId": "dc1e312b-1694-4577-e3bc-0059a0b52b0d"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -9281,7 +9281,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As per the above summary , the variables - Holiday_flg,fuel_price, year, day have p value greater than 0.05, whoch indicates these do not have impact on the tartget variable and can be removed."
+        "As per the above summary , the variables - Holiday_flg,fuel_price, year, day have p value less than 0.05, whoch indicates these do not have impact on the tartget variable and can be removed."
       ],
       "metadata": {
         "id": "ogJAg2p7L3kP"
@@ -9295,7 +9295,7 @@
       "metadata": {
         "id": "AETypBcQOH6r"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -9306,7 +9306,7 @@
       "metadata": {
         "id": "Q2-ld8hELiIy"
       },
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -9318,7 +9318,7 @@
       "metadata": {
         "id": "wQHt7A-mMbK2"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -9331,7 +9331,7 @@
       "metadata": {
         "id": "aGW-ubWLMevN"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -9347,7 +9347,7 @@
         "id": "4mBnv4MyPNO-",
         "outputId": "4305d9d2-fd92-4ab4-d40b-dec6b7788c0a"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9521,7 +9521,7 @@
         "id": "QRotfkpMPRsW",
         "outputId": "ebf9b1ba-0ba5-4aac-fa7b-3caec49d86c0"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9755,7 +9755,7 @@
       "metadata": {
         "id": "7oEfWzWBQSaU"
       },
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -9767,7 +9767,7 @@
       "metadata": {
         "id": "fH_tGWuMQdsg"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -9778,7 +9778,7 @@
       "metadata": {
         "id": "3tIOmWlJQnUc"
       },
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -9793,7 +9793,7 @@
         "id": "a3OYIENDQnvX",
         "outputId": "f1ea0339-56ee-4e98-e08d-f049703c1b92"
       },
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -9841,7 +9841,7 @@
         "id": "5BQ-fIl4Rc3K",
         "outputId": "2aa0f613-7406-4524-f555-6c7b9eec4371"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9863,7 +9863,7 @@
       "metadata": {
         "id": "OjSG_ybsQvUX"
       },
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -9878,7 +9878,7 @@
         "id": "J6p15f1LRSZd",
         "outputId": "0ba8cbd6-7680-490a-e4b6-90032ee4df61"
       },
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9915,7 +9915,7 @@
         "id": "NhQs1tRER2Wd",
         "outputId": "150a3d16-59e3-4276-a3bb-bb6c1e6562b4"
       },
-      "execution_count": null,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9931,9 +9931,225 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.linear_model import LinearRegression"
+      ],
       "metadata": {
         "id": "dmrKgJgPSLpu"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf = LinearRegression()"
+      ],
+      "metadata": {
+        "id": "pRK1GBooUcW2"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf.fit(train_x,train_y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 75
+        },
+        "id": "MGyAIEemUfAl",
+        "outputId": "5096b64e-007f-4d01-8efe-5bf87144aff6"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression()"
+            ],
+            "text/html": [
+              "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = clf.predict(test_x)"
+      ],
+      "metadata": {
+        "id": "HMRAr2wwUlRS"
+      },
+      "execution_count": 99,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-PFRbh7kU6N0",
+        "outputId": "cfff5207-bf1b-4c05-d63e-7e07d831994e"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1159624.59131773, 1086738.73326186, 1324024.38048197, ...,\n",
+              "        652982.03281226, 1231101.85912176, 1264186.98875892])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wuRd9inlVIax",
+        "outputId": "5bd52145-43d4-45e7-9df4-6f6e3af94bf2"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2436    1138800.32\n",
+              "3361    1304850.67\n",
+              "233     1769296.25\n",
+              "3667    1077640.13\n",
+              "5011     428851.99\n",
+              "           ...    \n",
+              "2600    1492060.89\n",
+              "6308     801098.43\n",
+              "6292     890689.51\n",
+              "151     2066187.72\n",
+              "2344     816138.33\n",
+              "Name: Weekly_Sales, Length: 1287, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clf.score(train_x,train_y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hkul5JN-VlZP",
+        "outputId": "11f058d4-f212-436d-f344-6265bae94e18"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.1463294372201478"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import mean_squared_error,mean_absolute_error"
+      ],
+      "metadata": {
+        "id": "awOXaUVAWLwl"
+      },
+      "execution_count": 94,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(y_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kw5ljX7bW34j",
+        "outputId": "66138754-ec31-45ce-b989-4b3ef8793c4b"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1287"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean_squared_error(test_y,y_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GYr6cMqmWfm1",
+        "outputId": "7575e82b-1042-4ea0-b18c-4e7601f573e4"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "272477344563.1168"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bkdi24nIWkWe"
       },
       "execution_count": null,
       "outputs": []
